--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>欢迎来访者来到超弦空间博客~</h1>
+        <h1>欢迎来访者来到超弦空间聊天室~</h1>
         <h3>以下两个链接任选其一，如果均无法直连请试试代理</h3>
         <ul>
             <li>主站：<a href="https://talkpro.czqblog.vip/", target="_blank">点击前往</a></li>
