--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <body>
     <div class="container">
         <h1>欢迎来访者来到超弦空间聊天室~</h1>
-        <h3>以下两个链接任选其一，如果均无法直连请试试代理</h3>
+        <h3>近日河南省对超弦空间域名进行了屏蔽，除河南省外所有地区均可访问主站和备站</h3>
+        <h3>如果你是河南省的来访者，请在以下两个链接任选其一打开测试，如果均无法直连请试试代理</h3>
         <ul>
             <li>主站：<a href="https://talkpro.czqblog.vip/", target="_blank">点击前往</a></li>
             <li>备站：<a href="https://elfely.elysianrealm.live/", target="_blank">点击前往</a></li>
