--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>如果你是河南省的来访者，请在以下两个链接任选其一打开测试，如果均无法直连请试试代理</h3>
         <ul>
             <li>主站：<a href="https://talkpro.czqblog.vip/", target="_blank">点击前往</a></li>
-            <li>备站：<a href="https://elfely.elysianrealm.live/", target="_blank">点击前往</a></li>
+            <li>备站：<a href="https://fxxkhenan.vercel.app/", target="_blank">点击前往</a></li>
         </ul>
     </div>
 </body>
