--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <li>主站：<a href="https://talkpro.czqblog.vip/", target="_blank">点击前往</a></li>
             <li>备站-1：<a href="https://mihooyoo.rhinenlp.space/", target="_blank">点击前往</a></li>
             <li>备站-2：<a href="https://nahida.mihoyo.click/", target="_blank">点击前往</a></li>
-            <li>备站-3：<a href="https://fxxkhenan.stringspace.site/", target="_blank">点击前往</a></li>
+            <li>备站-3：<a href="https://henanmsl.elyspace.site/", target="_blank">点击前往</a></li>
+            <li>备站-4：<a href="https://fxxkhenan.stringspace.site/", target="_blank">点击前往</a></li>
         </ul>
     </div>
 </body>
