--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div class="container">
         <h1>欢迎来访者来到超弦空间聊天室~</h1>
         <h3>近日河南省对超弦空间域名进行了屏蔽，除河南省外所有地区均可访问主站和备站</h3>
-        <h3>如果你是河南省的来访者，请在以下三个备站链接任选其一打开测试，速度会有点慢。如果依旧无法直连请走代理或者联系我获得帮助（</h3>
+        <h3>如果你是河南省的来访者，请在以下链接中任选其一打开测试，速度会有点慢。如果依旧无法直连请走代理或者联系我获得帮助（</h3>
         <ul>
-            <li>主站：<a href="https://talkpro.czqblog.vip/", target="_blank">点击前往</a></li>
+            <li>主站：<a href="https://prts.rhodesisland.online/", target="_blank">点击前往</a></li>
             <li>备站-1：<a href="https://mihooyoo.rhinenlp.space/", target="_blank">点击前往</a></li>
             <li>备站-2：<a href="https://nahida.mihoyo.click/", target="_blank">点击前往</a></li>
             <li>备站-3：<a href="https://henanmsl.elyspace.site/", target="_blank">点击前往</a></li>
