--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="icon" href="Logo.png" type="image/png">
-    <title>超弦导航</title>
+    <title>Rhine Navigator</title>
     <style>
         .container {
             width: 60%;
@@ -28,16 +28,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>欢迎来访者来到超弦空间聊天室~</h1>
-        <h3>近日河南省对超弦空间域名进行了屏蔽，除河南省外所有地区均可访问主站和备站</h3>
-        <h3>如果你是河南省的来访者，请在以下链接中任选其一打开测试，速度会有点慢。如果依旧无法直连请走代理或者联系我获得帮助（</h3>
+        <center><h1>欢迎来访者来到 Rhine Assistant 并开启你的无限灵感</h1></center>
+        <h3>近日 河南省 对本站域名进行了 SNI 阻断，该省外所有地区均可直连所有站点</h3>
+        <h3>如果你是来自 河南省 的来访者，请优先使用PC，并优先使用中国联通、中国电信的网络访问以下链接</h3>
         <ul>
-            <li>主站：<a href="https://prts.rhodesisland.online/", target="_blank">点击前往</a></li>
-            <li>备站-1：<a href="https://mihooyoo.rhinenlp.space/", target="_blank">点击前往</a></li>
-            <li>备站-2：<a href="https://nahida.mihoyo.click/", target="_blank">点击前往</a></li>
-            <li>备站-3：<a href="https://henanmsl.elyspace.site/", target="_blank">点击前往</a></li>
-            <li>备站-4：<a href="https://fxxkhenan.stringspace.site/", target="_blank">点击前往</a></li>
+            <li>“罗德岛”：<a href="https://prts.rhodesisland.online/", target="_blank">点击前往</a></li>
+            <li>“莱茵生命”：<a href="https://mihooyoo.rhinenlp.space/", target="_blank">点击前往</a></li>
+            <li>“纳西妲”：<a href="https://nahida.mihoyo.click/", target="_blank">点击前往</a></li>
+            <li>“往世乐土”：<a href="https://henanmsl.elyspace.site/", target="_blank">点击前往</a></li>
+            <li>“超弦”：<a href="https://fxxkhenan.stringspace.site/", target="_blank">点击前往</a></li>
         </ul>
+        <h3>如果你无法直连以上任一站点，请使用代理或联系我获得帮助。感谢来访者的支持！</h3>
     </div>
 </body>
 </html>
