--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <center><h1>欢迎来访者来到 Rhine Assistant 并开启你的无限灵感</h1></center>
         <h3>近日 河南省 对本站域名进行了 SNI 阻断，该省外所有地区均可直连所有站点</h3>
-        <h3>如果你是来自 河南省 的来访者，请优先使用PC，并优先使用中国联通、中国电信的网络访问以下链接</h3>
+        <h3>如果你是来自 河南省 的来访者，请优先使用PC，并优先使用中国联通、中国电信的网络访问</h3>
         <ul>
             <li>“罗德岛”：<a href="https://prts.rhodesisland.online/", target="_blank">点击前往</a></li>
             <li>“莱茵生命”：<a href="https://mihooyoo.rhinenlp.space/", target="_blank">点击前往</a></li>
