--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         <h3>如果你是来自 河南省 的来访者，请优先使用PC，并优先使用中国联通、中国电信的网络访问</h3>
         <ul>
             <li>“罗德岛”（主站，请优先访问）：<a href="https://prts.rhodesisland.online/", target="_blank">点击前往</a></li>
-            <li>“莱茵生命”：<a href="https://mihooyoo.rhinenlp.space/", target="_blank">点击前往</a></li>
-            <li>“智慧之神”：<a href="https://nahida.mihoyo.click/", target="_blank">点击前往</a></li>
+            <li>“HAUT”：<a href="https://ai.haut.ink/", target="_blank">点击前往</a></li>
+            <li>“克莱茵”：<a href="https://klein.rhinenlp.space/", target="_blank">点击前往</a></li>
+            <li>“须弥”：<a href="https://nahida.mihoyo.click/", target="_blank">点击前往</a></li>
+            <li>“妖精爱莉”：<a href="https://elfely.mihoyo.click/", target="_blank">点击前往</a></li>
             <li>“往世乐土”：<a href="https://nlp.elyspace.site/", target="_blank">点击前往</a></li>
             <li>“超弦助手”：<a href="https://assistant.stringspace.site/", target="_blank">点击前往</a></li>
-            <li>“妖精爱莉”：<a href="https://elfely.mihoyo.click/", target="_blank">点击前往</a></li>
         </ul>
         <h3>如果你无法直连以上任一站点，请使用代理或联系我获得帮助。感谢来访者的支持！</h3>
     </div>
