--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <link rel="icon" href="Logo.png" type="image/png">
@@ -17,44 +18,68 @@
             padding-left: 20px;
         }
 
-            ul li {
-                line-height: 2.3
-            }
+        ul li {
+            line-height: 2.3
+        }
 
         a {
             color: #20a53a
         }
     </style>
 </head>
+
 <body>
     <div class="container">
-        <center><h1>欢迎来访者来到 Rhine Assistant 并开启你的无限灵感</h1></center>
-        <center><h3>近日 河南省 对本站域名进行了 SNI 阻断，该省外所有地区均可直连所有站点</h3></center>
-        <center><h3>如果你是来自 河南省 的来访者，请优先使用PC，并优先使用中国联通、中国电信的网络访问</h3></center>
+        <center>
+            <h1>欢迎来访者来到 Rhine Assistant 并开启你的无限灵感</h1>
+        </center>
+        <center>
+            <h3>使用前必读：用户守则</h3>
+        </center>
+        <h4>1、本站旨在促进大模型应用，普及AIGC，降低各位来访者的使用门槛，能让各位更方便享受到全方位的大模型体验；</h4>
+        <h4>2、禁止使用本站免费额度进行包括但不限于文献翻译、模型训练、参加大型竞赛等会造成巨额Token消耗的行为；</h4>
+        <h4>3、禁止使用本站免费额度进行其他商业应用等一系列影响用户利益的行为；</h4>
+        <h4>4、如果来访者确有如上提及的需求，并认可和选择 Rhine Assistant 提供的大模型服务，请联系谦谦进行商业合作，免费额度属于公益性质，还请来访者理解。感谢各位的支持！</h4>
+        <center>
+            <h3>近日 河南省 对本站域名进行了 SNI 阻断，该省外所有地区均可直连所有站点</h3>
+        </center>
+        <center>
+            <h3>如果你是来自 河南省 的来访者，请优先使用PC，并优先使用中国联通、中国电信的网络访问</h3>
+        </center>
         <ul>
             <li>TIP：点击图片查看屏蔽和测速情况，仅供参考。由于使用CDN，第一次打开可能较慢，感谢来访者理解！</li>
-            <li>“罗德岛”（主站，请优先访问）：<a href="https://prts.rhodesisland.online/", target="_blank">点击前往</a></li>
-            <a href="ST/prts.png" target="_blank"><img src="ST/prts.png" alt="主站测速" style="width: 200px; height: auto;"></a>
+            <li>“罗德岛”（主站，请优先访问）：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
+            <a href="ST/prts.png" target="_blank"><img src="ST/prts.png" alt="主站测速"
+                    style="width: 200px; height: auto;"></a>
             <HR>
             <li>分流-1</li>
-            <li>“克莱茵”：<a href="https://klein.rhinenlp.space/", target="_blank">点击前往</a></li>
-            <a href="ST/klein.png" target="_blank"><img src="ST/klein.png" alt="克莱茵测速" style="width: 200px; height: auto;"></a>
-            <li>“妖精爱莉”：<a href="https://elfely.mihoyo.click/", target="_blank">点击前往</a></li>
-            <a href="ST/elfely.png" target="_blank"><img src="ST/elfely.png" alt="爱莉测速" style="width: 200px; height: auto;"></a>
+            <li>“克莱茵”：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
+            <a href="ST/klein.png" target="_blank"><img src="ST/klein.png" alt="克莱茵测速"
+                    style="width: 200px; height: auto;"></a>
+            <li>“妖精爱莉”：<a href="https://elfely.mihoyo.click/" , target="_blank">点击前往</a></li>
+            <a href="ST/elfely.png" target="_blank"><img src="ST/elfely.png" alt="爱莉测速"
+                    style="width: 200px; height: auto;"></a>
             <HR>
             <li>分流-2</li>
-            <li>“须弥”：<a href="https://nahida.mihoyo.click/", target="_blank">点击前往</a></li>
-            <a href="ST/nahida.png" target="_blank"><img src="ST/nahida.png" alt="须弥测速" style="width: 200px; height: auto;"></a>
-            <li>“超弦助手”：<a href="https://assistant.stringspace.site/", target="_blank">点击前往</a></li>
-            <a href="ST/assistant.png" target="_blank"><img src="ST/assistant.png" alt="超弦测速" style="width: 200px; height: auto;"></a>
+            <li>“须弥”：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
+            <a href="ST/nahida.png" target="_blank"><img src="ST/nahida.png" alt="须弥测速"
+                    style="width: 200px; height: auto;"></a>
+            <li>“超弦助手”：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
+            <a href="ST/assistant.png" target="_blank"><img src="ST/assistant.png" alt="超弦测速"
+                    style="width: 200px; height: auto;"></a>
             <HR>
             <li>分流-3</li>
-            <li>“HAUT”：<a href="https://ai.haut.ink/", target="_blank">点击前往</a></li>
-            <a href="ST/haut.png" target="_blank"><img src="ST/haut.png" alt="HAUT测速" style="width: 200px; height: auto;"></a>
-            <li>“往世乐土”：<a href="https://nlp.elyspace.site/", target="_blank">点击前往</a></li>
-            <a href="ST/nlp.png" target="_blank"><img src="ST/nlp.png" alt="乐土测速" style="width: 200px; height: auto;"></a>
+            <li>“HAUT”：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <a href="ST/haut.png" target="_blank"><img src="ST/haut.png" alt="HAUT测速"
+                    style="width: 200px; height: auto;"></a>
+            <li>“往世乐土”：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
+            <a href="ST/nlp.png" target="_blank"><img src="ST/nlp.png" alt="乐土测速"
+                    style="width: 200px; height: auto;"></a>
         </ul>
-        <center><h3>如果你无法直连以上任一站点，请使用代理或联系我获得帮助。感谢来访者的支持！</h3></center>
+        <center>
+            <h3>如果你无法直连以上任一站点，请使用代理或联系我获得帮助。感谢来访者的支持！</h3>
+        </center>
     </div>
 </body>
+
 </html>
