--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
         </center>
         <ul>
             <li>TIP：点击图片查看屏蔽和测速情况，仅供参考。由于使用CDN，第一次打开可能较慢，感谢来访者理解！</li>
-            <li>“罗德岛”（主站，请优先访问）：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
+            <li>河工大（高速主站，请优先访问）：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <a href="ST/ai.png" target="_blank"><img src="ST/ai.png" alt="HAUT测速"
+                    style="width: 200px; height: auto;"></a>
+            <li>罗德岛：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
             <a href="ST/prts.png" target="_blank"><img src="ST/prts.png" alt="主站测速"
                     style="width: 200px; height: auto;"></a>
             <HR>
@@ -56,24 +59,16 @@
             <li>“克莱茵”：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
             <a href="ST/klein.png" target="_blank"><img src="ST/klein.png" alt="克莱茵测速"
                     style="width: 200px; height: auto;"></a>
-            <li>“妖精爱莉”：<a href="https://elfely.mihoyo.click/" , target="_blank">点击前往</a></li>
-            <a href="ST/elfely.png" target="_blank"><img src="ST/elfely.png" alt="爱莉测速"
-                    style="width: 200px; height: auto;"></a>
-            <HR>
-            <li>分流-2</li>
             <li>“须弥”：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
             <a href="ST/nahida.png" target="_blank"><img src="ST/nahida.png" alt="须弥测速"
                     style="width: 200px; height: auto;"></a>
-            <li>“超弦助手”：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
-            <a href="ST/assistant.png" target="_blank"><img src="ST/assistant.png" alt="超弦测速"
-                    style="width: 200px; height: auto;"></a>
             <HR>
-            <li>分流-3</li>
-            <li>“HAUT”：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <a href="ST/haut.png" target="_blank"><img src="ST/haut.png" alt="HAUT测速"
-                    style="width: 200px; height: auto;"></a>
+            <li>分流-2</li>
             <li>“往世乐土”：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
             <a href="ST/nlp.png" target="_blank"><img src="ST/nlp.png" alt="乐土测速"
+                    style="width: 200px; height: auto;"></a>
+            <li>“超弦助手”：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
+            <a href="ST/assistant.png" target="_blank"><img src="ST/assistant.png" alt="超弦测速"
                     style="width: 200px; height: auto;"></a>
         </ul>
         <center>
