--- a/index.html
+++ b/index.html
@@ -72,9 +72,58 @@
                     style="width: 200px; height: auto;"></a>
         </ul>
         <center>
-            <h3>如果你无法直连以上任一站点，请使用代理或联系我获得帮助。感谢来访者的支持！</h3>
+            <h3>如果你无法直连以上任一站点，<a onclick="showPopup()">请使用代理访问</a>。感谢来访者的支持！</h3>
         </center>
     </div>
+
+    <style>
+        .popup {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #fff;
+            padding: 20px;
+            border: 1px solid #ccc;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            z-index: 9999;
+        }
+
+        .popup-content {
+            margin-bottom: 10px;
+        }
+
+        .popup-close {
+            cursor: pointer;
+            color: #999;
+            font-size: 18px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+    </style>
+
+    <script>
+        function showPopup() {
+            var popup = document.createElement("div");
+            popup.className = "popup";
+
+            var content = document.createElement("div");
+            content.className = "popup-content";
+            content.innerHTML = "<div><h4>这不是商业推广，也不是广告，纯个人推荐！</h4><h4>会随价格波动不定期更新推荐</h4></div><HR><div>找了一个相对便宜的魔法，可供来访者不时之需: <a href=\"https://xn--9kq250ga.com/\" target=\"_blank\">点击前往</a></div><HR><div>使用邀请码: T99sJcil 可以获得一些福利</div>";
+
+            var closeBtn = document.createElement("span");
+            closeBtn.className = "popup-close";
+            closeBtn.innerHTML = "&times;";
+            closeBtn.onclick = function () {
+                popup.parentNode.removeChild(popup);
+            };
+
+            popup.appendChild(content);
+            popup.appendChild(closeBtn);
+            document.body.appendChild(popup);
+        }
+    </script>
 </body>
 
 </html>
