modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,29 +47,27 @@
             <h3>如果你是来自 河南省 的来访者，请优先使用PC，并优先使用中国联通、中国电信的网络访问</h3>
         </center>
         <ul>
-            <li>TIP：点击图片查看屏蔽和测速情况，仅供参考。由于使用CDN，第一次打开可能较慢，感谢来访者理解！</li>
-            <li>河工大（高速主站，请优先访问）：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <a href="ST/ai.png" target="_blank"><img src="ST/ai.png" alt="HAUT测速"
-                    style="width: 200px; height: auto;"></a>
-            <li>罗德岛：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
-            <a href="ST/prts.png" target="_blank"><img src="ST/prts.png" alt="主站测速"
-                    style="width: 200px; height: auto;"></a>
+            <h4>TIP: 来访者可以使用<a href="https://www.itdog.cn/http/", target="_blank">ITDOG</a>对网站进行测速，查看速度和屏蔽情况 (仅供参考)。</h4>
+            <li>河工大 主站 (Zeabur加速)：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <!-- <a href="ST/ai.png" target="_blank"><img src="ST/ai.png" alt="HAUT测速"
+                    style="width: 200px; height: auto;"></a> -->
+            <li>罗德岛 主站 (CloudFlare加速)：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
+            <!-- <a href="ST/prts.png" target="_blank"><img src="ST/prts.png" alt="主站测速"
+                    style="width: 200px; height: auto;"></a> -->
             <HR>
-            <li>分流-1</li>
-            <li>“克莱茵”：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
-            <a href="ST/klein.png" target="_blank"><img src="ST/klein.png" alt="克莱茵测速"
-                    style="width: 200px; height: auto;"></a>
-            <li>“须弥”：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
-            <a href="ST/nahida.png" target="_blank"><img src="ST/nahida.png" alt="须弥测速"
-                    style="width: 200px; height: auto;"></a>
-            <HR>
-            <li>分流-2</li>
-            <li>“往世乐土”：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
-            <a href="ST/nlp.png" target="_blank"><img src="ST/nlp.png" alt="乐土测速"
-                    style="width: 200px; height: auto;"></a>
-            <li>“超弦助手”：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
-            <a href="ST/assistant.png" target="_blank"><img src="ST/assistant.png" alt="超弦测速"
-                    style="width: 200px; height: auto;"></a>
+            <li>以下为分流站点 (Vercel加速)</li>
+            <li>克莱茵：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
+            <!-- <a href="ST/klein.png" target="_blank"><img src="ST/klein.png" alt="克莱茵测速"
+                    style="width: 200px; height: auto;"></a> -->
+            <li>须弥：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
+            <!-- <a href="ST/nahida.png" target="_blank"><img src="ST/nahida.png" alt="须弥测速"
+                    style="width: 200px; height: auto;"></a> -->
+            <li>往世乐土：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
+            <!-- <a href="ST/nlp.png" target="_blank"><img src="ST/nlp.png" alt="乐土测速"
+                    style="width: 200px; height: auto;"></a> -->
+            <li>超弦助手：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
+            <!-- <a href="ST/assistant.png" target="_blank"><img src="ST/assistant.png" alt="超弦测速"
+                    style="width: 200px; height: auto;"></a> -->
         </ul>
         <center>
             <h3>如果你无法直连以上任一站点，<a onclick="showPopup()">请使用代理访问</a>。感谢来访者的支持！</h3>
