Feat: More Details

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 <body>
     <div class="container">
         <center>
-            <h1>欢迎来访者来到 Rhine Assistant 并开启你的无限灵感</h1>
+            <h1>欢迎来访者来到 Rhine Assistant 站点导航</h1>
         </center>
+        <HR>
         <center>
             <h3>使用前必读：用户守则</h3>
         </center>
@@ -40,35 +41,26 @@
         <h4>2、禁止使用本站免费额度进行包括但不限于文献翻译、模型训练、参加大型竞赛等会造成巨额Token消耗的行为；</h4>
         <h4>3、禁止使用本站免费额度进行其他商业应用等一系列影响用户利益的行为；</h4>
         <h4>4、如果来访者确有如上提及的需求，并认可和选择 Rhine Assistant 提供的大模型服务，请联系谦谦进行商业合作，免费额度属于公益性质，还请来访者理解。感谢各位的支持！</h4>
+        <HR>
         <center>
-            <h3>近日 河南省 对本站域名进行了 SNI 阻断，该省外所有地区均可直连所有站点</h3>
+            <h3>河南省、福建省部分地市的来访者可能会出现无法直连或直连不稳定的情况。请优先使用教育网、光纤网络进行直连</h3>
         </center>
-        <center>
-            <h3>如果你是来自 河南省 的来访者，请优先使用PC，并优先使用中国联通、中国电信的网络访问</h3>
-        </center>
+        <HR>
         <ul>
-            <h4>TIP: 来访者可以使用<a href="https://www.itdog.cn/http/", target="_blank">ITDOG</a>对网站进行测速，查看速度和屏蔽情况 (仅供参考)。</h4>
+            <h4>以下为主站点: </h4>
             <li>河工大 主站 (Zeabur加速)：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <!-- <a href="ST/ai.png" target="_blank"><img src="ST/ai.png" alt="HAUT测速"
-                    style="width: 200px; height: auto;"></a> -->
             <li>罗德岛 主站 (CloudFlare加速)：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
-            <!-- <a href="ST/prts.png" target="_blank"><img src="ST/prts.png" alt="主站测速"
-                    style="width: 200px; height: auto;"></a> -->
             <HR>
-            <li>以下为分流站点 (Vercel加速)</li>
+            <h4>以下为分流站点 (Vercel加速): </h4>
             <li>克莱茵：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
-            <!-- <a href="ST/klein.png" target="_blank"><img src="ST/klein.png" alt="克莱茵测速"
-                    style="width: 200px; height: auto;"></a> -->
             <li>须弥：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
-            <!-- <a href="ST/nahida.png" target="_blank"><img src="ST/nahida.png" alt="须弥测速"
-                    style="width: 200px; height: auto;"></a> -->
             <li>往世乐土：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
-            <!-- <a href="ST/nlp.png" target="_blank"><img src="ST/nlp.png" alt="乐土测速"
-                    style="width: 200px; height: auto;"></a> -->
             <li>超弦助手：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
-            <!-- <a href="ST/assistant.png" target="_blank"><img src="ST/assistant.png" alt="超弦测速"
-                    style="width: 200px; height: auto;"></a> -->
         </ul>
+        <center>
+            <h3>TIP: 来访者可以使用<a href="https://www.itdog.cn/http/" , target="_blank">ITDOG</a>对网站进行测速，查看速度和屏蔽情况 (仅供参考)。
+            </h3>
+        </center>
         <center>
             <h3>如果你无法直连以上任一站点，<a onclick="showPopup()">请使用代理访问</a>。感谢来访者的支持！</h3>
         </center>
