--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </center>
         <HR>
         <ul>
+            <center><h4>所有站点均重新更换了高速CDN，访问更加迅速！</h4></center>
             <h4>以下为主站点: </h4>
             <li>河工大 主站 (Zeabur加速)：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
             <li>罗德岛 主站 (CloudFlare加速)：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
