--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h4>1、本站旨在促进大模型应用，普及AIGC，降低各位来访者的使用门槛，能让各位更方便享受到全方位的大模型体验；</h4>
         <h4>2、禁止使用本站免费额度进行包括但不限于文献翻译、模型训练、参加大型竞赛等会造成巨额Token消耗的行为；</h4>
         <h4>3、禁止使用本站免费额度进行其他商业应用等一系列影响用户利益的行为；</h4>
-        <h4>4、如果来访者确有如上提及的需求，并认可和选择 Rhine Assistant 提供的大模型服务，请联系谦谦进行商业合作，免费额度属于公益性质，还请来访者理解。感谢各位的支持！</h4>
+        <h4>4、如果来访者确有如上提及的需求，请前往 <a href="https://closure.rhodesisland.online/", target="_blank">Rhine API Center</a> 购买 API 服务。免费额度属于公益性质，还请来访者理解。</h4>
         <HR>
         <center>
             <h3>河南省、福建省部分地市的来访者可能会出现无法直连或直连不稳定的情况。请优先使用教育网、光纤网络进行直连</h3>
