--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
             <center>
                 <h4>注意：部分省市的来访者可能会出现无法直连或直连不稳定的情况，此时请优先使用教育网、光纤网络进行直连</h4>
             </center>
-            <center><h4>所有站点均重新更换了高速CDN，访问更加迅速！</h4></center>
+            <center><h4>所有站点均重新更换了高速CDN，访问更加迅速！（注：带★的为直连状态较为稳定的站点，推荐使用）</h4></center>
             <h4>以下为主站点: </h4>
-            <li>河工大 主站 (Zeabur加速)：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <li>罗德岛 主站 (CloudFlare加速)：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
+            <li>河工大 主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <li>罗德岛 主站：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
+            <li>★ 莱茵实验室 主站：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
             <HR>
-            <h4>以下为分流站点 (Vercel加速): </h4>
+            <h4>以下为分流站点: </h4>
             <li>克莱茵：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
-            <li>须弥：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
+            <li>★ 须弥：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
             <li>往世乐土：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
             <li>超弦助手：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
         </ul>
