--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h4>所有站点均重新更换了高速CDN，访问更加迅速！（注：带★的为直连状态较为稳定的站点，推荐使用）</h4>
             </center>
             <h4>以下为主站点: </h4>
-            <li>河工大 主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <li>★ 河工大 主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
             <li>罗德岛 主站：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
             <li>★ 莱茵实验室 主站：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
             <HR>
