--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                 <h4>标记了 ★ 的链接为直连状态较为稳定的站点，推荐使用</h4>
             </center>
             <h4>主站点: </h4>
-            <li>★ 河工大 主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <li>罗德岛 主站：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
-            <li>★ 莱茵实验室 主站：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
+            <li>★ HAUT 主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <li>主站-2：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
+            <li>★ 主站-3：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
             <HR>
             <h4>分流站点: </h4>
-            <li>克莱茵：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
-            <li>★ 须弥：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
-            <li>往世乐土：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
-            <li>超弦助手：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
+            <li>★ 分站-1：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
+            <li>★ 分站-2：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
+            <li>★ 分站-3：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
+            <li>分站-4：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
         </ul>
         <center>
             <h3>点击这里查看 <a href="https://hq8hgl6szr1.feishu.cn/docx/PMOCdSsAooSfQnxdttZcHRNmnsf?from=from_copylink", target="_blank">使用文档</a></h3>
