--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
             </center>
             <h4>主站点: </h4>
             <li>★ HAUT 主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <li>主站-2：<a href="https://prts.rhodesisland.online/" , target="_blank">点击前往</a></li>
+            <li>★ 主站-2：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
             <li>★ 主站-3：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
             <HR>
             <h4>分流站点: </h4>
             <li>★ 分站-1：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
             <li>★ 分站-2：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
             <li>★ 分站-3：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
-            <li>分站-4：<a href="https://assistant.stringspace.site/" , target="_blank">点击前往</a></li>
         </ul>
         <center>
             <h3>点击这里查看 <a href="https://hq8hgl6szr1.feishu.cn/docx/PMOCdSsAooSfQnxdttZcHRNmnsf?from=from_copylink", target="_blank">使用文档</a></h3>
@@ -121,7 +120,7 @@
 
             var content = document.createElement("div");
             content.className = "popup-content";
-            content.innerHTML = "<div><h4>莱茵开放平台导航</h4></div><HR><div>主站: <a href=\"https://closure.rhodesisland.online/\" target=\"_blank\">点击前往</a></div><HR><div>大陆CDN: <a href=\"https://api.hautqian.top/\" target=\"_blank\">点击前往</a></div></div>";
+            content.innerHTML = "<div><h4>莱茵开放平台导航</h4></div><HR><div>主站: <a href=\"https://api.elyhaut.top/\" target=\"_blank\">点击前往</a></div><HR><div>大陆CDN: <a href=\"https://api.hautqian.top/\" target=\"_blank\">点击前往</a></div></div>";
 
             var closeBtn = document.createElement("span");
             closeBtn.className = "popup-close";
