--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <h4>标记了 ★ 的链接为直连状态较为稳定的站点，推荐使用</h4>
             </center>
             <h4>主站点: </h4>
-            <li>★ HAUT 主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <li>★ 主站-2：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
-            <li>★ 主站-3：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
+            <li>★ 工大主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <li>★ 国际主站：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
+            <li>★ 大陆主站：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
             <HR>
             <h4>分流站点: </h4>
             <li>★ 分站-1：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
