--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </center>
             <h4>主站点: </h4>
             <li>★ 工大主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <li>★ 国际主站：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
+            <li>国际主站：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
             <li>★ 大陆主站：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
             <HR>
             <h4>分流站点: </h4>
