--- a/index.html
+++ b/index.html
@@ -47,18 +47,15 @@
             <center>
                 <h4>注意：部分省市的来访者可能会出现无法直连或直连不稳定的情况，此时请优先使用教育网、光纤网络进行直连</h4>
             </center>
-            <center>
-                <h4>标记了 ★ 的链接为直连状态较为稳定的站点，推荐使用</h4>
-            </center>
-            <h4>主站点: </h4>
-            <li>★ 工大主站：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <li>国际主站：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
-            <li>★ 大陆主站：<a href="https://hautqian.top/" , target="_blank">点击前往</a></li>
+            <h4>稳定全球站点: </h4>
+            <li>站点 1：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
+            <li>站点 2：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
+            <li>站点 3：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
             <HR>
-            <h4>分流站点: </h4>
-            <li>★ 分站-1：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
-            <li>★ 分站-2：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
-            <li>★ 分站-3：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
+            <h4>标准全球站点: </h4>
+            <li>站点 1：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <li>站点 2：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
+            <li>站点 3：<a href="https://www.hautqian.top/" , target="_blank">点击前往</a></li>
         </ul>
         <center>
             <h3>点击这里查看 <a href="https://hq8hgl6szr1.feishu.cn/docx/PMOCdSsAooSfQnxdttZcHRNmnsf?from=from_copylink", target="_blank">使用文档</a></h3>
@@ -120,7 +117,7 @@
 
             var content = document.createElement("div");
             content.className = "popup-content";
-            content.innerHTML = "<div><h4>莱茵开放平台导航</h4></div><HR><div>主站: <a href=\"https://api.elyhaut.top/\" target=\"_blank\">点击前往</a></div><HR><div>大陆CDN: <a href=\"https://api.hautqian.top/\" target=\"_blank\">点击前往</a></div></div>";
+            content.innerHTML = "<div><h4>欢迎访问莱茵开放平台</h4></div><HR><center><div><a href=\"https://api.elyhaut.top/\" target=\"_blank\">点击前往站点</a></div></center></div>";
 
             var closeBtn = document.createElement("span");
             closeBtn.className = "popup-close";
