--- a/index.html
+++ b/index.html
@@ -45,17 +45,19 @@
         <HR>
         <ul>
             <center>
-                <h4>注意：部分省市的来访者可能会出现无法直连或直连不稳定的情况，此时请优先使用教育网、光纤网络进行直连</h4>
+                <h4>注意：由于近日阻断严重，请优先使用强加密站点和稳定站点</h4>
             </center>
+            <h4>强加密安全站点：</h4>
+            <li>站点 1：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
+            <li>站点 2：<a href="https://www.hautqian.top/" , target="_blank">点击前往</a></li>
+            <HR>
             <h4>稳定全球站点: </h4>
             <li>站点 1：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
             <li>站点 2：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
             <li>站点 3：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
             <HR>
-            <h4>标准全球站点: </h4>
-            <li>站点 1：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
-            <li>站点 2：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
-            <li>站点 3：<a href="https://www.hautqian.top/" , target="_blank">点击前往</a></li>
+            <h4>全球中心主站: </h4>
+            <li>站点 1：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
         </ul>
         <center>
             <h3>点击这里查看 <a href="https://hq8hgl6szr1.feishu.cn/docx/PMOCdSsAooSfQnxdttZcHRNmnsf?from=from_copylink", target="_blank">使用文档</a></h3>
