--- a/index.html
+++ b/index.html
@@ -46,18 +46,17 @@
         <ul>
             <center>
                 <h4>注意：由于近日阻断严重，请优先使用强加密站点和稳定站点</h4>
+                <h4>强加密站点是指已经支持了 ECH 技术的站点，请开启浏览器的 ECH 功能并结合 DoH 使用</h4>
             </center>
-            <h4>强加密安全站点：</h4>
+            <h4>ECH站点：</h4>
+            <li>中心站点：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
             <li>站点 1：<a href="https://ai.haut.ink/" , target="_blank">点击前往</a></li>
             <li>站点 2：<a href="https://www.hautqian.top/" , target="_blank">点击前往</a></li>
             <HR>
-            <h4>稳定全球站点: </h4>
+            <h4>全球站点: </h4>
             <li>站点 1：<a href="https://nahida.mihoyo.click/" , target="_blank">点击前往</a></li>
             <li>站点 2：<a href="https://klein.rhinenlp.space/" , target="_blank">点击前往</a></li>
             <li>站点 3：<a href="https://nlp.elyspace.site/" , target="_blank">点击前往</a></li>
-            <HR>
-            <h4>全球中心主站: </h4>
-            <li>站点 1：<a href="https://model.elyhaut.top/" , target="_blank">点击前往</a></li>
         </ul>
         <center>
             <h3>点击这里查看 <a href="https://hq8hgl6szr1.feishu.cn/docx/PMOCdSsAooSfQnxdttZcHRNmnsf?from=from_copylink", target="_blank">使用文档</a></h3>
