--- a/pages/tool.html
+++ b/pages/tool.html
@@ -25,7 +25,8 @@
                 <li>Rhine Assistant 入门：<a href="#" , target="_blank">施工中</a></li>
                 <HR>
                 <h3>工具推荐: </h3>
-                <li>施工中：<a href="#" , target="_blank">施工中</a></li>
+                <li>魔法工具：<a href="https://xn--9kq250ga.com/" , target="_blank">点击前往</a></li>
+                <p>PS：不定期更新，非商业广告</p>
             </ul>
         </div>
     </div>
