--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                                     style="max-width: 50%;">
                             </li>
                             <li>
-                                Rhine Assistant 唯一主站
+                                Rhine Assistant
                                 <a href="https://model.elyhaut.top/" target="_blank">
                                     <i>
                                         <strong>点击前往</strong>
@@ -537,8 +537,16 @@
                                 </a>
                             </li>
                             <li>
-                                Rhine 开放平台
-                                <a href="https://api.elyhaut.top/" target="_blank">
+                                Rhine Assistant Plus
+                                <a href="https://pro.rhinelab.com.cn/" target="_blank">
+                                    <i>
+                                        <strong>点击前往</strong>
+                                    </i>
+                                </a>
+                            </li>
+                            <li>
+                                Rhine Open Platform
+                                <a href="https://api.rhinelab.com.cn/" target="_blank">
                                     <i>
                                         <strong>点击前往</strong>
                                     </i>
