--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                             </li>
                             <li>
                                 Rhine Assistant
-                                <a href="https://model.elyhaut.top/" target="_blank">
+                                <a href="https://ai.rhinelab.com.cn/" target="_blank">
                                     <i>
                                         <strong>点击前往</strong>
                                     </i>
