--- a/index.html
+++ b/index.html
@@ -537,6 +537,14 @@
                                 </a>
                             </li>
                             <li>
+                                Rhine Assistant Demo（Plus 体验站）
+                                <a href="https://demo.rhinelab.com.cn/" target="_blank">
+                                    <i>
+                                        <strong>点击前往</strong>
+                                    </i>
+                                </a>
+                            </li>
+                            <li>
                                 Rhine Assistant Plus
                                 <a href="https://pro.rhinelab.com.cn/" target="_blank">
                                     <i>
