--- a/index.html
+++ b/index.html
@@ -561,6 +561,14 @@
                                 </a>
                             </li>
                             <li>
+                                Rhine Laboratory Blog
+                                <a href="https://www.rhinelab.com.cn/" target="_blank">
+                                    <i>
+                                        <strong>点击前往</strong>
+                                    </i>
+                                </a>
+                            </li>
+                            <li>
                                 谦谦の鸡汤集
                                 <br>
                                 <script src="https://api.dzzui.com/api/yiyan?format=js"></script>
